--- a/ChatGPT_Python.ipynb
+++ b/ChatGPT_Python.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "source": [
         "pip install openai\n",
-        "#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"
+       
       ],
       "metadata": {
         "id": "Eh0a8kKPxZCM"
@@ -31,7 +31,7 @@
       "source": [
         "import openai\n",
         "\n",
-        "API_KEY = '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'\n",
+        "API_KEY = '$$$$$$$$$$$$$$$$$$'\n",
         "openai.api_key = API_KEY"
       ],
       "metadata": {
